3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/time.c: Real change is to add a missing call to fix_player - without
   this new players would be getting messed up maxsp/maxgrace values.  Cleaned
   up formatting in move_player_changer() while doing the other change.
   MSW 2003-09-28

common/living.c, include/libproto.h: Update some functions to take 64 bit int
   values for exp usage.
random_maps/random_map.c: Don't ever make rogue maps symmetric -
   creates unconnected maps.  Clean up layoutgen() to not have a bunch
   of duplicated code.
MSW 2003-09-25

server/skill_util.c: Call esrv_send_inventory on the cauldron if we
   performed alchemy.  Needed for cauldron's contents to get updated.
   MSW 2003-09-23

  Modified files:
    TODO common/anim.c common/arch.c common/button.c common/exp.c
    common/init.c common/item.c common/living.c common/loader.c
    common/loader.l common/logger.c common/object.c
    common/re-cmp.c common/readable.c common/recipe.c
    common/treasure.c doc/Developers/objects
    doc/Developers/protocol doc/Developers/python
    doc/Developers/skills doc/Developers/spells
    include/Makefile.am include/Makefile.in include/attack.h
    include/config.h include/define.h include/global.h
    include/includes.h include/libproto.h include/living.h
    include/map.h include/newclient.h include/newserver.h
    include/object.h include/player.h include/plugin.h
    include/skills.h include/sockproto.h include/spells.h
    include/sproto.h include/timers.h lib/Makefile.am
    lib/Makefile.in lib/animations lib/archetypes lib/artifacts
    lib/bmaps lib/bmaps.paths lib/collect.pl.in lib/crossfire.0