@@ -1,0 +1,12 @@
+<form method="post" action="/cgi-bin/player_dl.pl">
+Character name:<br>
+<input type="text" name="playername" maxlength="50" size="30">
+<p>
+
+Character password:<br>
+<input type="password" name="password" maxlength="50" size="30">
+<p>
+
+<input type="submit" value="Submit">
+<input type="reset" value="Clear Entries">
+</form>
